Разрешения готовы, остается поправить отступы

--- a/blocks/columns/__url-heading/columns__url-heading.css
+++ b/blocks/columns/__url-heading/columns__url-heading.css
@@ -1,6 +1,6 @@
 .columns__url-heading {
   color: #ffffff;
-  margin: 0;
+  margin: 10px 0 13px;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
