--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,16 @@
 .intro__title {
   color: #ffffff;
-  margin: 8px 0 0;
   font-size: 54px;
   font-weight: 900;
   line-height: 58px;
   text-align: left;
-  border: 1px solid red;
+}
+
+@media screen and (max-width: 460px) {
+  .intro__title {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    text-align: left;
+  }
 }
