--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/-width/intro__list-width-normal.css);
 @import url(../blocks/photo/photo.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
@@ -30,6 +31,7 @@
 @import url(../blocks/columns/__url-heading/columns__url-heading.css);
 @import url(../blocks/columns/__link/columns__link.css);
 @import url(../blocks/columns/__paragraph/columns__paragraph.css);
+@import url(../blocks/columns/__paragraph/_space/columns__paragraph_space-less.css);
 @import url(../blocks/columns/__website/_position/columns__website_position-higher.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__image/cover__image.css);
