--- a/blocks/columns/__link/columns__link.css
+++ b/blocks/columns/__link/columns__link.css
@@ -1,8 +1,7 @@
 .columns__link {
   color: #ffffff;
-  margin: 12px 0 0;
+  margin: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
-  text-align: left;
 }
