--- a/blocks/columns/__paragraph/columns__paragraph.css
+++ b/blocks/columns/__paragraph/columns__paragraph.css
@@ -1,8 +1,17 @@
 .columns__paragraph {
   color: #ffffff;
-  margin: 26px 0 0;
+  margin: 45px 0 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 29px;
   text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .columns__paragraph {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+  }
 }
