--- a/blocks/columns/__right-column/columns__right-column.css
+++ b/blocks/columns/__right-column/columns__right-column.css
@@ -1,5 +1,6 @@
 .columns__right-column {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+
+  /* align-items: flex-start; */
 }
