--- a/blocks/columns/__title/columns__title.css
+++ b/blocks/columns/__title/columns__title.css
@@ -7,3 +7,20 @@
   line-height: 76px;
   text-align: left;
 }
+
+@media screen and (max-width: 768px) {
+  .columns__title {
+    font-size: 42px;
+    font-weight: 900;
+    line-height: 46px;
+    text-align: left;
+  }
+
+@media screen and (max-width: 500px) {
+  .columns__title {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    text-align: left;
+  }
+}
