--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,13 @@
   text-align: center;
   max-width: 360px;
 }
+
+@media screen and (max-width: 700px) {
+  .cover__subtitle {
+    margin: 16px 0 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    max-width: 288px;
+  }
+}
