--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -3,18 +3,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 60%;
-  height: 60%;
-  min-width: 400px;
-  max-width: 560px;
-  padding: 40px;
-  overflow: auto;
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
 
-  border: 1px solid red;
+  position: absolute;
+  align-self: center;
+  width: 80%;
+  right: 10%;
+}
+
+@media screen and (max-width: 700px) {
+  .cover__text {
+    width: 80%;
+    left: 10%;
+  }
 }
