--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,12 @@
   text-align: center;
   max-width: 560px;
 }
+
+@media screen and (max-width: 700px) {
+  .cover__title {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 35px;
+    max-width: 288px;
+  }
+}
