--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,21 @@
 .cover {
-  width: calc(100% - 96px);
-  border: 1px solid yellow;
-  margin: 92px auto 0;
+  padding: 92px 48px 0;
   display: flex;
-  /* align-items: center; */
-  /* justify-content: center; */
   position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    padding: 92px 0 0;
+  }
+
+@media screen and (max-width: 768px) {
+  .cover {
+    padding: 90px 0 0;
+  }
+
+@media screen and (max-width: 500px) {
+  .cover {
+    padding: 66px 0 0;
+  }
 }
