--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -5,3 +5,9 @@
   font-weight: 400;
   line-height: 16px;
 }
+
+@media screen and (max-width: 700px) {
+  .footer__author {
+    margin: 48px 0 0;
+  }
+}
