--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,3 +6,16 @@
   font-weight: 400;
   line-height: 18px;
 }
+
+.footer__link:last-of-type {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .footer__link {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: 32px;
+  }
+}
