--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,13 @@
 .footer__links {
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+@media screen and (max-width: 700px) {
+  .footer__links {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
