--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 .header__lang-link {
   font-size: 24px;
   font-weight: 400;
-  line-height: 28px;
-  margin: 0 0 6px 18px;
+  line-height: 36px;
+  margin: 0;
   color: #ffffff;
-  text-decoration: double;
+  text-decoration: none;
 }
