--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,21 @@
 .header {
   display: flex;
-  width: calc(100% - 96px);
+  /* width: calc(100% - 96px); */
+  padding: 28px 48px 0;
   justify-content: space-between;
-  background-color: #2a2c2f;
-  margin: 28px 48px 0;
+  /* margin: 28px 0 0; */
   align-items: flex-end;
-  border: 1px solid red;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    /* width: calc(100% - 48px); */
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header {
+    padding: 28px 16px 0;
+  }
 }
