--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,19 @@
 .lead__subtitle {
   color: #ffffff;
   margin: 32px auto 64px;
-  max-width: 720px;
+  max-width: 540px;
   font-size: 30px;
   font-weight: 400;
   line-height: 36px;
   text-align: center;
+}
+
+@media screen and (max-width: 740px) {
+  .lead__subtitle {
+    margin: 16px 0 40px;
+    max-width: 288px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+  }
 }
