--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,18 @@
 .lead {
+  padding: 56px 148px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    padding: 56px 48px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding: 48px 0 0;
+  }
 }
