--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,9 @@
 .page {
   font-family: 'Inter', Arial, sans-serif;
-  width: 100%;
+  max-width: 1480px;
   background-color: #2a2c2f;
-  display: flex;
+
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  border: 1px solid green;
+  align-items: center; */
 }
