--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -1,5 +1,19 @@
 .photo {
-  width: calc(100% - 96px);
-  border: 1px solid red;
-  margin: 92px auto 0;
+  padding: 92px 48px 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo {
+    padding: 95px 48px 0;
+  }
+
+@media screen and (max-width: 768px) {
+  .photo {
+    padding: 92px 24px 0;
+  }
+
+@media screen and (max-width: 500px) {
+  .photo {
+    padding: 64px 16px 0;
+  }
 }
