--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,19 @@
 .places {
-  width: calc(100% - 296px);
-  border: 1px solid red;
-  margin: 92px auto 0;
+  padding: 92px 148px 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+    padding: 92px 48px 0;
+  }
+
+@media screen and (max-width: 768px) {
+  .places {
+    padding: 88px 24px 0;
+  }
+
+@media screen and (max-width: 500px) {
+  .places {
+    padding: 64px 0 0;
+  }
 }
