--- a/blocks/columns/__website/columns__website.css
+++ b/blocks/columns/__website/columns__website.css
@@ -1,3 +1,9 @@
 .columns__website {
   margin: 94px 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  .columns__website {
+    margin: 32px 0 0 16px;
+  }
+}
