--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,3 +6,12 @@
   color: #ffffff;
   text-decoration: none;
 }
+
+@media screen and (max-width: 500px) {
+  .header__lang-link {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+  }
+}
