--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,3 +7,9 @@
   text-align: left;
   letter-spacing: 2px;
 }
+
+@media screen and (max-width: 500px) {
+  .lead__caption {
+    margin: 8px 0 0 16px;
+  }
+}
