по пикселю все норм!

--- a/blocks/columns/__url-heading/columns__url-heading.css
+++ b/blocks/columns/__url-heading/columns__url-heading.css
@@ -6,3 +6,15 @@
   line-height: 12px;
   text-align: left;
 }
+
+@media screen and (max-width: 1024px) {
+  .columns__url-heading {
+    margin: 10px 0 13px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .columns__url-heading {
+    margin: 0 0 13px;
+  }
+}
