--- a/blocks/columns/__paragraph/columns__paragraph.css
+++ b/blocks/columns/__paragraph/columns__paragraph.css
@@ -1,6 +1,6 @@
 .columns__paragraph {
   color: #ffffff;
-  margin: 45px 0 0;
+  margin: 0px 0 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 29px;
@@ -9,10 +9,26 @@
 
 @media screen and (max-width: 768px) {
   .columns__paragraph {
+    margin: 0px 0 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26.08px;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .columns__paragraph {
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
     text-align: left;
-    margin: 32px 16px 0;
+    margin: 3px 16px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .columns__paragraph {
+    max-width: 268px;
   }
 }
