--- a/blocks/columns/__title/columns__title.css
+++ b/blocks/columns/__title/columns__title.css
@@ -1,6 +1,6 @@
 .columns__title {
   color: #ffffff;
-  margin: 0;
+  margin: 0 0 4px 0;
   max-width: 460px;
   font-size: 72px;
   font-weight: 900;
@@ -11,17 +11,17 @@
 @media screen and (max-width: 768px) {
   .columns__title {
     font-size: 42px;
+    max-width: 320px;
     font-weight: 900;
     line-height: 46px;
-    text-align: left;
   }
+}
 
 @media screen and (max-width: 500px) {
   .columns__title {
     font-size: 32px;
     font-weight: 900;
     line-height: 35px;
-    text-align: left;
     margin: 0 0 0 16px;
   }
 }
