--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,14 @@
 .footer {
-  padding: 90px 48px 24px;
+  padding: 91px 48px 24px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 85px 24px 24px;
+  }
 }
 
 @media screen and (max-width: 700px) {
