--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,6 +8,13 @@
   letter-spacing: 2px;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    margin: 8px 0 0 24px;
+    letter-spacing: 1.5px;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .lead__caption {
     margin: 8px 0 0 16px;
