--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,6 +8,12 @@
   text-align: center;
 }
 
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 32px auto 56px;
+  }
+}
+
 @media screen and (max-width: 740px) {
   .lead__subtitle {
     margin: 16px 0 40px;
