--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,8 @@
   font-family: 'Inter', Arial, sans-serif;
   max-width: 1480px;
   background-color: #2a2c2f;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   /* display: flex;
   flex-direction: column;
