--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,11 +8,13 @@
   .cover {
     padding: 92px 0 0;
   }
+}
 
 @media screen and (max-width: 768px) {
   .cover {
     padding: 90px 0 0;
   }
+}
 
 @media screen and (max-width: 500px) {
   .cover {
