--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,10 +5,8 @@
   font-weight: 900;
   line-height: 100px;
   text-align: center;
-  margin:0;
+  margin: 0;
 }
-
-
 
 @media screen and (max-width: 740px) {
   .lead__title {
@@ -16,4 +14,4 @@
     font-size: 40px;
     line-height: 44px;
   }
-
+}
