--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,12 +10,14 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
   }
+}
 
 @media screen and (max-width: 768px) {
   .photo-grid {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
   }
+}
 
 @media screen and (max-width: 500px) {
   .photo-grid {
@@ -24,4 +26,3 @@
     row-gap: 12px;
   }
 }
-
