--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -6,11 +6,13 @@
   .photo {
     padding: 92px 48px 0;
   }
+}
 
 @media screen and (max-width: 768px) {
   .photo {
     padding: 92px 24px 0;
   }
+}
 
 @media screen and (max-width: 500px) {
   .photo {
