--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,11 +6,13 @@
   .places {
     padding: 92px 48px 0;
   }
+}
 
 @media screen and (max-width: 768px) {
   .places {
     padding: 88px 24px 0;
   }
+}
 
 @media screen and (max-width: 500px) {
   .places {
