--- a/blocks/columns/__paragraph/columns__paragraph.css
+++ b/blocks/columns/__paragraph/columns__paragraph.css
@@ -1,28 +1,26 @@
 .columns__paragraph {
   color: #ffffff;
-  margin: 0px 0 0;
+  margin: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 29px;
   text-align: left;
 }
 
+.columns__paragraph:nth-of-type(even) {
+  margin-top: 26px;
+}
+
 @media screen and (max-width: 768px) {
   .columns__paragraph {
-    margin: 0px 0 0;
     font-size: 16px;
-    font-weight: 400;
     line-height: 26.08px;
-    text-align: left;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .columns__paragraph {
-    font-size: 16px;
-    font-weight: 400;
     line-height: 26px;
-    text-align: left;
     margin: 3px 16px 0;
   }
 }
