--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,3 +1,25 @@
 .cover__link {
+  display: flex;
   width: 100%;
+  object-fit: cover;
+  width: 100%;
+  background-image: url(../../../images/do_baikala_na_sobackah.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  min-height: 865px;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1280px) {
+  .cover__link {
+    min-height: calc(0.625 * (100vw - 96px));
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__link {
+    min-height: calc(0.625 * (100vw));
+  }
 }
