--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -3,17 +3,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  position: absolute;
-  align-self: center;
-  width: 80%;
-  right: 10%;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 700px) {
-  .cover__text {
-    width: 80%;
-    left: 10%;
-  }
+  z-index: 3;
 }
