--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,6 +1,6 @@
 .footer__author {
   color: #ffffff;
-  margin: 0 0 0 0;
+  margin: 0;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
