--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,10 @@
   line-height: 18px;
 }
 
+.footer__link:hover {
+  opacity: 80%;
+}
+
 .footer__link:last-of-type {
   margin-right: 0;
 }
@@ -14,7 +18,6 @@
 @media screen and (max-width: 700px) {
   .footer__link {
     font-size: 24px;
-    font-weight: 400;
     line-height: 24px;
     margin-top: 32px;
   }
