--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,19 @@
 .footer {
-  padding: 91px 48px 24px;
+  padding: 0px 48px 24px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
+@media screen and (max-width: 1024px) {
+  .footer {
+    padding: 92px 48px 24px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .footer {
-    padding: 87px 24px 24px;
+    padding: 90px 24px 24px;
   }
 }
 
