--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,13 +5,21 @@
   margin: 0;
   color: #ffffff;
   text-decoration: none;
+  list-style-type: none;
+  padding: 0;
+}
+
+.header__lang-link:hover {
+  opacity: 80%;
+}
+
+.header__lang-link:last-of-type {
+  margin-left: 18px;
 }
 
 @media screen and (max-width: 500px) {
   .header__lang-link {
     font-size: 18px;
-    font-weight: 400;
     line-height: 32px;
-    margin: 0;
   }
 }
