--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,13 +5,13 @@
   font-weight: 400;
   line-height: 14px;
   text-align: left;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 768px) {
   .lead__caption {
     margin: 8px 0 0 24px;
-    letter-spacing: 1.5px;
   }
 }
 
