--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,14 +1,19 @@
 .photo-grid {
   display: grid;
-  gap: 16px;
+  row-gap: 12px;
+  column-gap: 15px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    row-gap: 11px;
   }
 }
 
@@ -16,6 +21,7 @@
   .photo-grid {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
+    row-gap: 12px;
   }
 }
 
@@ -23,6 +29,6 @@
   .photo-grid {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(12, 1fr);
-    row-gap: 12px;
+    row-gap: 8.5px;
   }
 }
