--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,11 +4,25 @@
   object-fit: cover;
   background-image: url(../../../images/do_baikala_na_sobackah.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   min-height: 865px;
   justify-content: center;
   align-items: center;
   text-decoration: none;
+}
+
+.cover__link::after {
+  width: 100%;
+  height: 100%;
+  content: '';
+  background-color: #2a2c2f;
+  opacity: 30%;
+  z-index: 1;
+  position: absolute;
+}
+
+.cover__link:hover::after {
+  opacity: 80%;
 }
 
 @media screen and (max-width: 1280px) {
